<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tvSearchID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/tv_Search_ID" />

    <EditText
        android:id="@+id/etSearchID"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvSearchID" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Search"
        android:layout_below="@+id/etSearchID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />

    <Button
        android:id="@+id/btnCancelable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_btnCancelable"
        android:layout_below="@+id/btnSearch"
        android:layout_centerHorizontal="true" />

</RelativeLayout>